# cassie_ws_tmp

src/cassie_common_toolbox/: CMakeLists.txt
src/cassie_common_toolbox/downstep_models/: blankworld.sdf  downstep.blend  downstep.dae  downstep.mtl
src/cassie_common_toolbox/include/cassie_common_toolbox/: BasicSpline.hpp
src/cassie_common_toolbox/src/: BasicSpline.cpp
src/cassie_controllers/: CMakeLists.txt  package.xml
src/cassie_controllers/include/cassie_controllers/: OUTPUT_HLIP.hpp  OUTPUT_SLIP.hpp  OUTPUT_SLIP_downstep.hpp  TSCQPsolver.hpp  TSCQPsolver_SLIP.hpp  TSCQPsolver_SLIP_FE.hpp
src/cassie_controllers/include/cassie_controllers/old/: IDCLFQPsolver.hpp  OUTPUT_DEBUG.hpp  OUTPUT_standing.hpp  TSCQPsolver.hpp  TSCQPsolver_DEBUG.hpp  TSCQPsolver_SLIP_osqp.hpp  splines_debug.hpp  splines_downstep.hpp  splines_nominal.hpp  splines_nominal_debug.hpp  splines_transition.hpp  standing_control_qp.hpp
src/cassie_controllers/src/: OUTPUT_HLIP.cpp  OUTPUT_SLIP.cpp  OUTPUT_SLIP_downstep.cpp  PDcontroller.cpp  TSCQPsolver.cpp  TSCQPsolver_SLIP_FE.cpp  hardware_testing_node.cpp  locomotion_node_SLIP.cpp
src/cassie_controllers/src/old/: IDCLFQPsolver.cpp  OUTPUT_DEBUG.cpp  OUTPUT_standing.cpp  TSCQPsolver.cpp  TSCQPsolver_DEBUG.cpp  TSCQPsolver_SLIP.cpp  TSCQPsolver_SLIP_osqp.cpp  locomotion_node_DEBUG.cpp  locomotion_node_new.cpp  standing_control_qp.cpp
src/cassie_description/: generate_libraries.m
src/cassie_description/MATLAB/: Cassie_v4.asv  Cassie_v4.m
src/cassie_description/MATLAB/symbolic/+codegen/+Joris_outputs/: DLfya_1Actual_SLIP.m  DLfya_LeftStanceActual_SLIP.m  DLfya_LeftStanceActual_SLIP_with_xcom.m  DLfya_RightStanceActual_SLIP.m  DLfya_RightStanceActual_SLIP_with_xcom.m  Dya_1Actual_SLIP.m  Dya_LeftStanceActual_SLIP.m  Dya_LeftStanceActual_SLIP_with_xcom.m  Dya_RightStanceActual_SLIP.m  Dya_RightStanceActual_SLIP_with_xcom.m  J_footPositionLeft.m  J_footPositionRight.m  J_yaLeftStance_SLIP.m  dya1_SLIP.m  (+22 more)
src/cassie_description/cassie/: box.sdf  box_middle.sdf  cassie.sdf  cassie_empty.world  cassie_rigid.xml
src/cassie_description/src/: cassie_model.cpp
src/cassie_estimation/: CMakeLists.txt
src/cassie_estimation/include/: cassiemujoco.h
src/cassie_estimation/include/cassie_estimation/: basic_contact_ekf.hpp  contact_classifier.hpp
src/cassie_estimation/src/: basic_contact_ekf.cpp  cassie_estimation_node.cpp  contact_classifier.cpp  contact_ekf.cpp
src/cassie_interface/: CMakeLists.txt
src/cassie_interface/launch/: cassie_SLIP_gazebo.launch  cassie_SLIP_hardware.launch  cassie_SLIP_mujoco.launch  cassie_world.launch  cassie_world_downstep.launch
src/cassie_interface/launch/old/: cassie_interface_walkqp_simulated.launch
src/cassie_interface/launch/stepping_stone/: model.sdf
src/cassie_interface/launch/stepping_stone_long/: model.sdf
src/cassie_interface/src/: CassiePlugin.cpp  cassie_interface_node.cpp  cassie_interface_udp.cpp  cassie_mujocoSim_node.cpp
(+403 files in other folders)
